--- a/index.html
+++ b/index.html
@@ -1,147 +1,48 @@
-<!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Miniport by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+---
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
+#title: "VMASC Datathon Project"
+#layout: splash
+#classes:
+ # - landing
+#permalink: /
+#header:
+#  overlay_image: images/vmasc-front.jpeg
+#---
 
-		<!-- Home -->
-			<article id="top" class="wrapper style1">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Hello. I'm <strong>Kevin O'Brien</strong>.</h1>
-							</header>
-							<p>A graduate of <strong>Computer Science</strong> from <strong>Old Dominion University</strong>, now pursuing my master degree in Data Science, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
-						</div>
-					</div>
-				</div>
-			</article>
 
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
-			</article>
+title: "Biodiversity of Significant Trees in Norfolk, VA by Census Tract"
+layout: splash
+permalink: /
+header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
+  overlay_image: images/tree.jpg
 
-		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
-					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-					</div>
-					
-				</div>
-			</article>
+---
 
-		
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<h2>Biodiversity of Significant Trees in Norfolk, VA by Census Tract</h2>
+<p><a href="https://vmasc.org/">Team Virginia Modeling, Analysis, &amp; Simulation Center (VMASC)</a></p>
+<p>Created as part of the <a href="https://data.norfolk.gov/stories/s/Hampton-Roads-Datathon/wk4d-6jxs/">Hampton Roads Datathon 2022: Analyzing, Promoting, and Protecting Biodiversity in Hampton Roads</a>&nbsp;from September 9-16, 2022 and hosted by <em>CivicLab Norfolk</em>.</p>
+<p>Trees serve an important role in providing protection from the natural elements, such as providing cooler spots to rest during the hot portions of the day and helping to stay out of direct sunlight to reduce the risk of sunburn. Exposure to high temperatures and high humidity can lead to heat cramps, heat exhaustion, and heatstroke. A contributing risk factor to the occurrence of heat exhaustion is a high heat index of 91 degrees Fahrenheit or higher. Trees provide assistant in this instances by providing shade and lowering the perceived air temperature.</p>
+<p>For the datathon, we explore the benefits provided by trees identified as significant within the city of Norfolk within the Hampton Roads area. Additionally, we also look at the locations of newly planted tress as part of the City of Norfolk's tree planting program that plants trees on city owned property. Data and categorization of significant trees in Norfolk, VA are collected by volunteers with the Norfolk Master Gardeners. Visualizations and analyses are conducted at the census tract level within the city to provide insights into the geographical distribution of tree across the city.&nbsp;Our solution is divided into three sections: (i) visualization of significant and planting tree program trees by census tract in Norfolk, VA, (ii) a simulation exploring the effects of heat exposure and the role of Norfolk's significant trees on pedestrians, and (iii) analytics highlighting the breakdown of trees within each census tract and highlighting the findings from the simulation runs.&nbsp;</p>
+<h4>Simulation of Heat Exposures by Census Tract in Norfolk, VA</h4>
+<p>We utilized a simulation model of exposures to simulate the effects of people traveling through Norfolk, VA on a hot day and exploring the effects of the Significant Trees on the overall perceived heat within the census tracts. To this end, the Significant Trees were incorporated into the simulation in the form of exposures which serve to lower the perceived temperature of any person under their canopies by 15 degrees fahrenheit while within their shade. Two scenarios were tested. The first assumed that people are traveling from their workplaces to non-home locations and then back to work. The second assumed that people are traveling from their home to non-home locations and then back to home. Both scenarios were run for two settings: (i) using the current set of Significant Trees, and (ii) using the set of future trees based on the information from the City of Norfolk's Tree Planting Program. This resulted in a total of four generated test cases.</p>
+<div>&nbsp;</div>
+<h4>Significant Tree Descriptions by Census Tract and Analytics of Simulation Outcomes</h4>
+<p>We conduct two types of analyses on the data. The first is a descriptive statistics reprentation of the Significant Trees within Norfolk, VA at the census tract level. The second is an assessment of the simulation outcomes for the four tested scenarios. The provided tables can be filtered and sorted as desired. The assessment of the simulation outcomes provides the total distance traveled be each simulated person, the total distance traveled while under shade, and the percent of the time that each person spent under shade while walking.&nbsp;</p>
+<p>The code and data for this project is available in a <a title="Project Repository" href="https://dev.azure.com/cjlynch/Hampton%20Roads%20Datathon%202022%20-%20Team%20VMASC" target="_blank" rel="noopener">publicly accessible repository</a>.</p>
+<p>&nbsp;</p>
+<p><strong>Our Team:</strong></p>
+<p><a href="https://vmasc.org/staff-profiles/dr-ross-gore/" target="_blank" rel="noopener"><strong>Dr. Ross Gore, Ph.D.</strong></a> is a Research Associate Professor at the Virginia Modeling, Analysis and Simulation Center (VMASC) at Old Dominion University (ODU). His current work focuses on data science and predictive analytics. He can be found on <a href="https://twitter.com/rossgore" target="_blank" rel="noopener">Twitter</a> as @rossgore.</p>
+<p><a href="https://vmasc.org/staff-profiles/dr-christopher-lynch/" target="_blank" rel="noopener"><strong>Dr. Christopher J. Lynch, Ph.D.</strong></a> leads the Data Analytics Working Group at VMASC of Old Dominion University. His current work focuses on Data Science, Analytics, and Health Informatics. His Twitter handle is <a href="https://twitter.com/Chris_Lynch_ODU" target="_blank" rel="noopener">@Chris_Lynch_ODU</a></p>
+<p><a href="https://www.linkedin.com/in/kevin-o-brien-0334321bb/" target="_blank" rel="noopener"><strong>Kevin O'Brien</strong></a> is a Software Developer Specialist (Analyst) in the Capabilities Laboratory at VMASC of Old Dominion University.</p>
+<p><strong><a href="https://www.linkedin.com/in/virginia-zamponi-536052209/" target="_blank" rel="noopener">Virginia Zamponi</a> </strong>works in the Capabilities Laboratory under Kevin O'Brien at VMASC and is a Modeling and Simulation student within the CMSE Department of Old Dominion University.</p>
+<p><strong><a href="https://scholar.google.com/citations?hl=en&amp;user=OHIeH5YAAAAJ" target="_blank" rel="noopener">Erik Jensen</a></strong> is a Graduate Research Assistant at VMASC and a Graduate Student in the Computational Modeling and Simulation Engineering (CMSE) Department of Old Dominion University.</p>
+<p><a href="https://www.linkedin.com/in/brandon-feldhaus-831100218/" target="_blank" rel="noopener"><strong>Brandon Feldhaus</strong></a> is a Full Stack Developer in the Capabilities Laboratory at VMASC of Old Dominion University.</p>
 
-	</body>
-</html>
+<p align="center">
+    <img src="/images/vmasc.PNG" alt="VMASC Logo">
+</p>
